# Bosch_Code_Challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  docker-compose.yml  pyproject.toml
benchmarks/: full_pipeline_benchmark_report.md
data/faiss_index/: index.faiss  index.pkl
nginx/: default.conf
presentation/: slides.md
scripts/: benchmark_full.py  benchmark_routing.py  entrypoint.sh  evaluate.py  ingest.py
src/me_assistant/: __init__.py  config.py
src/me_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/me_assistant/agent/: graph.py  llm_router.py  nodes.py  prompts.py  router.py  state.py  tools.py
src/me_assistant/eval/: evaluate.py  metrics.py
src/me_assistant/ingest/: indexer.py  loader.py  splitter.py
src/me_assistant/model/: log.py  pyfunc.py
src/me_assistant/retrieval/: retriever.py
tests/: test_graph.py  test_integration.py  test_predict.py  test_retrieval.py  test_router.py
ui/: app.py  config.py
ui/components/: header.py  metadata.py  pipeline_status.py  sidebar.py
ui/styles/: theme.py
